--- a/larp-poc-api/Characters.html
+++ b/larp-poc-api/Characters.html
@@ -5,47 +5,76 @@
 </head>
 <body>
 
-<div>
-    <h2>All Characters</h2>
-    <ul id="characters" />
-</div>
-<div>
-    <h2>Search by ID</h2>
-    <input type="text" id="charId" size="5" />
-    <input type="button" value="Search" onclick="find();" />
-    <p id="character" />
-</div>
+    <div>
+        <h2>All Characters</h2>
+        <ul id="characters" />
+    </div>
+    <div>
+        <h2>Search by ID</h2>
+        <input type="text" id="charId" size="5" />
+        <input type="button" value="Add Character" onclick="add();" />
+        <input type="button" value="Remove Character" onclick="remove();" />
+        <p id="character" />
+    </div>
 
-<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.0.3.min.js"></script>
-<script>
-    var uri = 'api/characters';
+    <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.0.3.min.js"></script>
+    <script>
+        var uri = 'api/characters';
 
-    $(document).ready(function () {
-        // Send an AJAX request
-        $.getJSON(uri)
-            .done(function (data) {
-                // On success, 'data' contains a list of characters.
-                $.each(data, function (key, item) {
-                    // Add a list item for the character.
-                    $('<li>', { text: formatItem(item) }).appendTo($('#characters'));
+        $(document).ready(function () {
+            // Send an AJAX request
+            $.getJSON(uri)
+                .done(function (data) {
+                    // On success, 'data' contains a list of characters.
+                    $.each(data, function (i, item) {
+                        $.each(item,
+                            function (key, value) {
+                                // Add a list item for the character.
+                                $('<li>' + key + ': ' + value + '</li>').appendTo($('#characters'));
+                            });
+                    });
                 });
-            });
-    });
+        });
 
-    function formatItem(item) {
-        return item.Name + ': $' + item.Price;
-    }
+        function formatItem(item) {
+            return item.Name + ': $' + item.Price;
+        }
 
-    function find() {
-        var id = $('#charId').val();
-        $.getJSON(uri + '/' + id)
-            .done(function (data) {
-                $('#character').text(formatItem(data));
-            })
-            .fail(function (jqXHR, textStatus, err) {
-                $('#character').text('Error: ' + err);
-            });
-    }
-</script>
+        function add() {
+            var id = $('#charId').val();
+            $.post(uri + '/' + id, '=' + id)
+                .done(function (data) {
+                    $('#characters').html('');
+                    $.each(data, function (i, item) {
+                        $.each(item,
+                            function (key, value) {
+                                // Add a list item for the character.
+                                $('<li>' + key + ': ' + value + '</li>').appendTo($('#characters'));
+                            });
+                    });
+                })
+                .fail(function (jqXHR, textStatus, err) {
+                    $('#character').text('Error: ' + err);
+                });
+        }
+
+        function add() {
+            var id = $('#charId').val();
+            $.post(uri + '/' + id, '=' + id)
+                .done(function (data) {
+                    $('#characters').html('');
+                    $.each(data, function (i, item) {
+                        $.each(item,
+                            function (key, value) {
+                                // Add a list item for the character.
+                                $('<li>' + key + ': ' + value + '</li>').appendTo($('#characters'));
+                            });
+                    });
+                })
+                .fail(function (jqXHR, textStatus, err) {
+                    $('#character').text('Error: ' + err);
+                });
+        }
+    </script>
 </body>
 </html>
