--- a/larp-poc-api/Characters.html
+++ b/larp-poc-api/Characters.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Character App</title>
+    <link rel="stylesheet" type="text/css" href="Content\bootstrap.css">
 </head>
 <body>
 
